--- a/setup.cfg
+++ b/setup.cfg
@@ -13,3 +13,9 @@ exclude =
     src/**/tests,
     src/**/__init__.py
 max-complexity = 7
+
+
+[pydocstyle]
+inherit = false
+ignore = D100,D203,D405
+match = *.py
