--- a/.travis.yml
+++ b/.travis.yml
@@ -5,23 +5,21 @@ sudo: false
 # Test environments
 matrix:
   include:
-   - env: TOXENV=py27
-     python: 2.7
-   - env: TOXENV=py33
-     python: 3.3
    - env: TOXENV=py34
      python: 3.4
    - env: TOXENV=py35
      python: 3.5
+   - env: TOXENV=py36
+     python: 3.6
 
 # Package installation
 install:
-  - pip install tox coveralls
+  - pip install tox codecov
 
 # Run tests
 script:
-  tox
+  - tox
 
 # Register code coverage in coveralls
 after_success:
-  coveralls
+  - codecov
